[gd_scene load_steps=21 format=3 uid="uid://0roeo12fj0oj"]

[ext_resource type="Script" uid="uid://u006o2huaftt" path="res://scenes/game.gd" id="1_2fkce"]
[ext_resource type="PackedScene" uid="uid://d4g312fn0bvrl" path="res://components/Vignette/vignette.tscn" id="2_rqdcb"]
[ext_resource type="Texture2D" uid="uid://dem6022hmghd4" path="res://assets/noise3.png" id="3_0j27q"]
[ext_resource type="Texture2D" uid="uid://bb7qhvcpm6ap1" path="res://assets/light.png" id="4_tdng2"]
[ext_resource type="PackedScene" uid="uid://bqxbl5g2mq8ux" path="res://components/OuterCircle/circle.tscn" id="5_osxv8"]
[ext_resource type="PackedScene" uid="uid://c5b4kmyq4areg" path="res://components/collector/collector.tscn" id="6_873k1"]
[ext_resource type="PackedScene" uid="uid://dekch12eksf1o" path="res://components/chevron/chevron.tscn" id="7_srsp4"]
[ext_resource type="PackedScene" uid="uid://0ph1416mbkin" path="res://components/Block/block.tscn" id="8_h3skp"]
[ext_resource type="Script" uid="uid://b75uqrrgkc1h2" path="res://components/behaviors/behavior_resource.gd" id="9_1jxxp"]
[ext_resource type="Script" uid="uid://clf2nejfhwusp" path="res://components/behaviors/rotatable.gd" id="10_nf8ca"]
[ext_resource type="PackedScene" uid="uid://hvdgipr7f6tl" path="res://components/center_ring/ring_3.tscn" id="12_nlg5r"]
[ext_resource type="PackedScene" uid="uid://dsvxyitdo575o" path="res://components/Source/source.tscn" id="13_42w8j"]
[ext_resource type="PackedScene" uid="uid://d01suqvxqrtbi" path="res://components/game_sfx/sfx.tscn" id="14_2fkce"]
[ext_resource type="PackedScene" uid="uid://ddg33gy842v6y" path="res://components/MusicVolume/music_volume.tscn" id="14_t3isr"]

[sub_resource type="Shader" id="Shader_2fkce"]
code = "shader_type canvas_item;
//render_mode unshaded; // optional

// Noise texture
uniform sampler2D noise_texture: repeat_enable, filter_nearest;
// Fog density
uniform float density: hint_range(0.0, 1.0) = 0.25;
// Fog speed
uniform vec2 speed = vec2(0.02, 0.01);


// Called for every pixel the material is visible on
void fragment() {
	// Make the fog slowly move
	vec2 uv = UV + speed * TIME;
	// Sample the noise texture
	float noise = texture(noise_texture, uv).r;
	// Convert the noise from the (0.0, 1.0) range to the (-1.0, 1.0) range
	// and clamp it between 0.0 and 1.0 again
	float fog = clamp(noise * 2.0 - 1.0, 0.0, 1.0);
	// Apply the fog effect
	COLOR.a *= fog * density;
}
"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vtaks"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rqdcb"]
noise = SubResource("FastNoiseLite_vtaks")
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dinhu"]
shader = SubResource("Shader_2fkce")
shader_parameter/noise_texture = SubResource("NoiseTexture2D_rqdcb")
shader_parameter/density = 0.1170000055575
shader_parameter/speed = Vector2(0, -0.02)

[sub_resource type="Resource" id="Resource_wrqhy"]
resource_name = "rotation"
script = ExtResource("10_nf8ca")
metadata/_custom_type_script = "uid://clf2nejfhwusp"

[sub_resource type="Resource" id="Resource_j5cmh"]
resource_name = "rotation"
script = ExtResource("10_nf8ca")
metadata/_custom_type_script = "uid://clf2nejfhwusp"

[node name="Game" type="Node2D"]
script = ExtResource("1_2fkce")

[node name="Screen" type="CanvasLayer" parent="."]
visible = false

[node name="Vignette" parent="Screen" instance=ExtResource("2_rqdcb")]

[node name="Boundaries" type="StaticBody2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.01, 0.01)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boundaries"]
polygon = PackedVector2Array(-98354, -66938, 122252, -70912, 118156, 77312, -101876, 71296, -98347, -67683, -99113, -67647, -102321, 72368, 120264, 78281, 122973, -71879, -98327, -67682)

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.59717613, 0.59717613, 0.5971761, 1)
light_mask = 17
visibility_layer = 17
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -855.0
offset_top = -854.0
offset_right = 806.0
offset_bottom = 774.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(858, 871)
mouse_filter = 2
texture = ExtResource("3_0j27q")
stretch_mode = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 16
visibility_layer = 16
range_item_cull_mask = 16
texture = ExtResource("4_tdng2")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Fog" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_dinhu")
custom_minimum_size = Vector2(100, 100)
offset_left = -656.0
offset_top = -545.0
offset_right = 704.0
offset_bottom = 437.0

[node name="Circle" parent="." instance=ExtResource("5_osxv8")]

[node name="Collector" parent="Circle" instance=ExtResource("6_873k1")]
position = Vector2(9.536743e-07, -250.99997)
rotation = 3.1333597

[node name="Chevron2" parent="Circle" instance=ExtResource("7_srsp4")]
position = Vector2(252.00003, 6)
rotation = 1.5707964

[node name="Chevron3" parent="Circle" instance=ExtResource("7_srsp4")]
position = Vector2(-251, -3)
rotation = 4.712389

[node name="Chevron4" parent="Circle" instance=ExtResource("7_srsp4")]
position = Vector2(2, 253)
rotation = 3.1415927

[node name="Machine" type="Node2D" parent="."]

[node name="Block2" parent="Machine" instance=ExtResource("8_h3skp")]
position = Vector2(181, -85.000015)
rotation = 0.7853982
scale = Vector2(0.2, 0.2)
collision_layer = 2
collision_mask = 2
behaviors = Array[ExtResource("9_1jxxp")]([SubResource("Resource_wrqhy")])

[node name="Source" parent="Machine" instance=ExtResource("13_42w8j")]
number_of_rays = 3

[node name="Block" parent="Machine" instance=ExtResource("8_h3skp")]
position = Vector2(-183.99998, -83)
rotation = 1.3089969
scale = Vector2(0.2, 0.2)
behaviors = Array[ExtResource("9_1jxxp")]([SubResource("Resource_j5cmh")])

[node name="Ring3" parent="Machine" instance=ExtResource("12_nlg5r")]

[node name="MusicVolume" parent="." instance=ExtResource("14_t3isr")]
offset_left = 492.0
offset_top = -285.0
offset_right = 532.0
offset_bottom = -245.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sfx" parent="." instance=ExtResource("14_2fkce")]

[connection signal="on_scene_changed" from="." to="." method="_on_on_scene_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
